<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoLive!</string>
    
    <string name="login_acc">帳號 : </string>
    <string name="login_pwd">密碼 : </string>
    <string name="acc"></string>
    <string name="pwd"></string>
    
    <string name="tab_talk">聊天</string>
    <string name="tab_contact">通訊錄</string>
    <string name="tab_find">搜尋</string>
    <string name="tab_setting">設定</string>
    
    <string name="notifier_alarm">有新訊息！</string>
    <string name="notifier_msg">收到新的訊息！</string>
    
    <string name="dialog_loading_title">存取資源</string>
    <string name="dialog_loading_msg">下載中，請稍後</string>
    
    <string name="three_g">使用3G/3.5G網路</string>
    <string name="wifi">使用wifi網路</string>
    <string name="nonetwork">沒有連上網路</string>
    
    <string name="login">登入</string>
    <string name="login_reg">註冊帳號</string>
    
    <string name="contactNoneAlertTitle">無選取聯絡人</string>
    <string name="contactNoneAlertMsg">您沒有選取任何聯絡人，請選取</string>
    <string name="contactOneAlertTitle">與聯絡人對話</string>
    <string name="contactMultiAlertTitle">開啟多人聊天</string>
    
    <string name="AlertConfirm">確認</string>
    <string name="AlertCalcel">取消</string>
    
    <string name="settingLogoutCheckTitle">登出確認</string>
    <string name="settingLogoutCheckMsg">確定要登出？</string>
    <string name="setting_Logout_str">退出登入</string>
    <string name="setting_Spacenote_str">更新個性簽名</string>
    <string name="setting_Spacenote_Title">你可以更新個性簽名, 讓好友們知道你在做什麼...</string>
    
    <string name="setting_getGreat_str">好康分享</string>
    
    <string name="findfriend">找朋友</string>
    <string name="findfriendViaAcc">由帳號新增</string>
    <string name="findfriendViaArea">由區域新增</string>
    <string name="findfriendViaMap">由地圖新增</string>
    <string name="findfriendAddAlert">新增至聯絡人</string>
    <string name="searchAcc_ET_str">輸入帳號搜尋</string>
    <string name="searchAcc_BT_str">搜尋</string>
    <string name="searchArea">選擇省份</string>
    <string-array name="searchArea_array">
        <item>北京</item>
        <item>上海</item>
        <item>重慶</item>
        <item>安徽</item>
        <item>福建</item>
        <item>甘肅</item>
        <item>廣東</item>
        <item>廣西</item>
        <item>貴州</item>
        <item>海南</item>
        <item>河北</item>
        <item>黑龍江</item>
        <item>河南</item>
        <item>香港</item>
        <item>湖北</item>
        <item>湖南</item>
        <item>江蘇</item>
        <item>江西</item>
        <item>吉林</item>
        <item>遼寧</item>
        <item>澳門</item>
        <item>內蒙古</item>
        <item>寧夏</item>
        <item>青海</item>
        <item>山東</item>
        <item>山西</item>
        <item>陝西</item>
        <item>四川</item>
        <item>台灣</item>
        <item>天津</item>
        <item>新疆</item>
        <item>西藏</item>
        <item>雲南</item>
        <item>浙江</item>
        <item>海外</item>
    </string-array>
    <string name="searchArea_BT_str">搜尋</string>
    <string name="searchAreaNext_BT_str">下頁</string>
    <string name="searchAreaPre_BT_str">上頁</string>
    
    <string name="person_title">個人訊息</string>
    <string name="person_area_title">地區</string>
    <string name="person_spacenote_title">個性簽名</string>
    <string name="person_sendmsg_bt">發訊息</string>
    <string name="person_addfriend_bt">加好友</string>
    
    <string name="inputStrEmpAlert">並未輸入資訊</string>
    <string name="noResultAlert">沒有找到任何資料</string>
    
    <string name="selectType_title">選擇訊息類型</string>
    <string name="selectType_text">文字</string>
    <string name="selectType_voice">語音</string>
    <string name="selectType_photo">拍照</string>
    <string name="selectType_emotion">表情</string>
    
    <string name="chatroom_deltitle">刪除對話串</string>
    <string name="chatroom_delmsg">確定要刪除此對話串嗎？(無法回復)</string>
    
    <string name="chat_voicebutton">按著說話</string>
    <string name="chat_voicebutton_clicked">記錄聲音中...</string>
    
    <string name="chat_photobutton">開啟相機</string>
    

</resources>